[package]
name = "bytehub_core"
version = "0.5.1"
authors = ["ByteHub Contributors"]
description = "ByteHub's core facilities."
repository = "https://github.com/MartinKuo-XY/bytehub-rs"
readme = "README.md"
documentation = "https://docs.rs/bytehub_core"
keywords = ["network", "relay", "zero-copy", "websocket", "tls"]
edition = "2021"
license = "MIT"

[dependencies]
# bytehub
bytehub_io = { path = "../bytehub_io" }
bytehub_syscall = { path = "../bytehub_syscall" }
bytehub_hook = { path = "../bytehub_hook", optional = true }
bytehub_lb = { path = "../bytehub_lb", optional = true }
kaminari = { version = "0.14", features = ["ws", "tls", "mix"], optional = true }

# other
futures = "0.3"
log = "0.4"
bytes = { version = "1", optional = true }
once_cell = "1"
pin-project = "1"
hickory-resolver = "0.25"
tokio = { version = "1.9", features = ["rt", "net", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
proxy-protocol = { version = "0.5", optional = true }

[features]
default = []
hook = ["bytehub_hook"]
balance = ["bytehub_lb"]
brutal-shutdown = ["bytehub_io/brutal-shutdown"]
transport = ["kaminari"]
transport-boost = []
transport-tls-ring = ["kaminari/tls-ring"]
transport-tls-awslc = ["kaminari/tls-awslc"]
proxy = ["proxy-protocol", "bytes", "tokio/io-util"]
batched-udp = []
multi-thread = []

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros"] }
