[package]
name = "bytehub_hook"
version = "0.1.4"
authors = ["zephyr <i@zephyr.moe>"]
description = "ByteHub's flexible hooks."
repository = "https://github.com/MartinKuo-XY/bytehub-rs"
readme = "README.md"
documentation = "https://docs.rs/bytehub_hook"
keywords = ["ffi", "hook"]
edition = "2021"
license = "MIT"


[dependencies]
once_cell = "1"
libloading = "0.8"
